[package]
name = "grid_path_finder"
version = "2.0.0"
authors = ["Sandra | Laila | (Priscilla)"]
repository = "https://github.com/an-Iceberg/grid_path_finder"
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.76"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
  # "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
itertools = "0.13.0"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# to access the DOM (to hide the loading text)
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
# HACK: pin web-sys to <0.3.70 until a new `eframe` is released containing
# the following PR: https://github.com/emilk/egui/pull/4980
version = ">= 0.3.4, < 0.3.70"

[profile.release]
opt-level = 3 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 3
